--- a/Game/Game.vcxproj.filters
+++ b/Game/Game.vcxproj.filters
@@ -171,6 +171,12 @@
     <ClInclude Include="Button.h">
       <Filter>Header Files\UI</Filter>
     </ClInclude>
+    <ClInclude Include="ListenerClass.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="UserData.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main_game.cpp">
@@ -280,6 +286,9 @@
     </ClCompile>
     <ClCompile Include="VampireBat.cpp">
       <Filter>Source Files\enemy</Filter>
+    </ClCompile>
+    <ClCompile Include="ListenerClass.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
