--- a/Game/Game.vcxproj.filters
+++ b/Game/Game.vcxproj.filters
@@ -174,6 +174,9 @@
     <ClInclude Include="HUDController.h">
       <Filter>Header Files\UI</Filter>
     </ClInclude>
+    <ClInclude Include="AnimationController.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main_game.cpp">
@@ -286,6 +289,9 @@
     </ClCompile>
     <ClCompile Include="HUDController.cpp">
       <Filter>Source Files\UI</Filter>
+    </ClCompile>
+    <ClCompile Include="AnimationController.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
