* fix memory leak in UIText + change target icon when change weapon - now HUD and bullet info is load from scene.txt

--- a/Framework3D/TrainingFramework/TrainingFramework.vcxproj
+++ b/Framework3D/TrainingFramework/TrainingFramework.vcxproj
@@ -161,6 +161,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Text Include="..\Resources\Datas\resourcesMainMenu.txt" />
     <Text Include="..\Resources\Datas\resources2d.txt" />
     <Text Include="..\Resources\Datas\scene2d.txt" />
   </ItemGroup>
