--- a/Game/Game.vcxproj
+++ b/Game/Game.vcxproj
@@ -158,11 +158,13 @@
     <ClCompile Include="State\GS_PauseState.cpp" />
     <ClCompile Include="State\GS_PlayState.cpp" />
     <ClCompile Include="State\GS_WelcomScreen.cpp" />
+    <ClCompile Include="State\MapEditor.cpp" />
     <ClCompile Include="State\StateBase.cpp" />
     <ClCompile Include="stdafx.cpp" />
     <ClCompile Include="SuicideBug.cpp" />
     <ClCompile Include="UIComponent.cpp" />
     <ClCompile Include="UIText.cpp" />
+    <ClCompile Include="UnitButton.cpp" />
     <ClCompile Include="VampireBat.cpp" />
     <ClCompile Include="Weapon.cpp" />
     <ClCompile Include="WorldManager.cpp" />
@@ -202,12 +204,14 @@
     <ClInclude Include="State\GS_PauseState.h" />
     <ClInclude Include="State\GS_PlayState.h" />
     <ClInclude Include="State\GS_WelcomScreen.h" />
+    <ClInclude Include="State\MapEditor.h" />
     <ClInclude Include="State\StateBase.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="SuicideBug.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="UIComponent.h" />
     <ClInclude Include="UIText.h" />
+    <ClInclude Include="UnitButton.h" />
     <ClInclude Include="UserData.h" />
     <ClInclude Include="VampireBat.h" />
     <ClInclude Include="Weapon.h" />
