+ simple paricles emitter

--- a/Framework3D/TrainingFramework/TrainingFramework.vcxproj
+++ b/Framework3D/TrainingFramework/TrainingFramework.vcxproj
@@ -142,6 +142,8 @@
     <None Include="..\Resources\Shaders\CubeShaderVS.vs" />
     <None Include="..\Resources\Shaders\FireShaderFS.fs" />
     <None Include="..\Resources\Shaders\FireShaderVS.vs" />
+    <None Include="..\Resources\Shaders\ParticlesShaderFS.fs" />
+    <None Include="..\Resources\Shaders\ParticlesShaderVS.vs" />
     <None Include="..\Resources\Shaders\Sprite2DShaderFS.fs" />
     <None Include="..\Resources\Shaders\Sprite2DShaderVS.vs" />
     <None Include="..\Resources\Shaders\TerrainShaderFS.fs" />
@@ -159,6 +161,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Text Include="..\Resources\Datas\effects.txt" />
     <Text Include="..\Resources\Datas\resourcesMainMenu.txt" />
     <Text Include="..\Resources\Datas\resources2d.txt" />
     <Text Include="..\Resources\Datas\scene2d.txt" />
