--- a/Framework3D/TrainingFramework/TrainingFramework.vcxproj.filters
+++ b/Framework3D/TrainingFramework/TrainingFramework.vcxproj.filters
@@ -208,5 +208,11 @@
     <Text Include="..\Resources\Datas\effects.txt">
       <Filter>Resources\Datas</Filter>
     </Text>
+    <Text Include="..\Resources\Datas\map1-1.txt">
+      <Filter>Resources\Datas</Filter>
+    </Text>
+    <Text Include="..\Resources\Datas\map1-2.txt">
+      <Filter>Resources\Datas</Filter>
+    </Text>
   </ItemGroup>
 </Project>
