--- a/Game/Game.vcxproj
+++ b/Game/Game.vcxproj
@@ -174,6 +174,7 @@
     <ClCompile Include="State\GS_MainMenu.cpp" />
     <ClCompile Include="State\GS_PauseState.cpp" />
     <ClCompile Include="State\GS_PlayState.cpp" />
+    <ClCompile Include="State\GS_TutorialState.cpp" />
     <ClCompile Include="State\GS_WelcomScreen.cpp" />
     <ClCompile Include="State\MapEditor.cpp" />
     <ClCompile Include="State\StateBase.cpp" />
@@ -236,6 +237,7 @@
     <ClInclude Include="State\GS_MainMenu.h" />
     <ClInclude Include="State\GS_PauseState.h" />
     <ClInclude Include="State\GS_PlayState.h" />
+    <ClInclude Include="State\GS_TutorialState.h" />
     <ClInclude Include="State\GS_WelcomScreen.h" />
     <ClInclude Include="State\MapEditor.h" />
     <ClInclude Include="State\StateBase.h" />
