--- a/Framework3D/TrainingFramework/TrainingFramework.vcxproj
+++ b/Framework3D/TrainingFramework/TrainingFramework.vcxproj
@@ -162,6 +162,7 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="..\Resources\Datas\effects.txt" />
+    <Text Include="..\Resources\Datas\endless_map.txt" />
     <Text Include="..\Resources\Datas\map1-1.txt" />
     <Text Include="..\Resources\Datas\map1-2.txt" />
     <Text Include="..\Resources\Datas\resourcesMainMenu.txt" />
